deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wechat-h5-backend
  namespace: three-class-backend
spec:
  selector:
    matchLabels:
      app: wechat-h5-backend
  template:
    metadata:
      labels:
        app: wechat-h5-backend
    spec:
      containers:
        - name: wechat-h5-backend
          image: DOCKER_REGISTRY/donviewclass-wechat-h5-backend:DOCKER_IMAGE_TAG
          resources:
            limits:
              memory: 128Mi
              cpu: "50m"
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: iclasssecret
